--- a/client/js/components/Pin/styles.css
+++ b/client/js/components/Pin/styles.css
@@ -1,4 +1,5 @@
 .pinContainer {
+  width: 200px;
   box-sizing: border-box;
   padding: 4px;
   margin: 8px;
@@ -12,7 +13,7 @@
 }
 
 .pinImage {
-  max-width: 200px;
+  width: 200px;
   display: block;
   margin-left: auto;
   margin-right: auto;
