--- a/client/js/components/Profile/styles.css
+++ b/client/js/components/Profile/styles.css
@@ -4,6 +4,10 @@
   box-shadow: 0 0 8px rgba(94, 104, 114, .8);
 }
 
+.masonryContainer {
+  margin: 0 auto;
+}
+
 .accountsContainer {
   max-width: 200px;
 }
