--- a/client/index.pug
+++ b/client/index.pug
@@ -7,7 +7,7 @@ html(lang="en")
 
     link(rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css")
     link(rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css")
-    title="Book-trader"
+    title="Pinterest Clone"
 
     if assets && assets.styles
       each asset in assets.styles
